# wgsl-preprocess

./: Cargo.toml
crates/aniline_drivers/: Cargo.toml
crates/aniline_drivers/src/: drivers.rs  lib.rs
crates/aniline_drivers/src/drivers/: cpu.rs  metal.rs
crates/playground/: Cargo.toml
crates/playground/src/: event_handler.rs  main.rs  program.rs  shader.wgsl  timer.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  setup.rs  shader.rs
crates/runtime/src/fixtures/: common.wgsl  shader.wgsl
