[package]
name = "aniline_drivers"
version = "0.1.0"
edition = "2021"


[features]
default = []
gl = ["offscreen_gl_context", "sparkle", "skia-safe/gl"]
egl = ["gl", "skia-safe/egl"]
x11 = ["gl", "skia-safe/x11"]
wayland = ["egl", "skia-safe/wayland"]
vulkan = ["ash", "skia-safe/vulkan"]
metal = ["metal-rs", "foreign-types-shared", "cocoa", "objc", "skia-safe/metal"]
d3d = ["skia-safe/d3d", "winapi", "wio"]
webp = ["skia-safe/webp"]

[dependencies]
skia-safe = { version = "0.46.0", features = ["textlayout", "webp"] }

# 0.25.1 fails to build on iOS targets on macOS: https://github.com/servo/rust-offscreen-rendering-context/pull/150
offscreen_gl_context = { git = "https://github.com/rust-skia/rust-offscreen-rendering-context", rev = "1b9c74737635add2b9076e12df129cc3326c1287", optional = true }
# offscreen_gl_context = "0.25.1"
# for offscreen_gl_context 0.25
# sparkle 0.1.9 fails to compile on macOS targeting aarch64-linux-android
# sparkle 0.1.25 is incompatible with offscreen_gl_context
sparkle = { version = "=0.1.24", optional = true }
# Vulcan
ash = { version = "0.33", optional = true }
# MacOs / IOS
metal-rs = { package = "metal", version = "0.23.0", optional = true }
# ... to access raw metal ptrs.
foreign-types-shared = { version = "0.1.1", optional = true }
# ... for that NSAutoReleasePool to be able to free metal devices.
cocoa = { version = "0.24", optional = true }
objc = { version = "0.2.4", optional = true }
# d3d
winapi = { version = "0.3.9", optional = true, features = ["d3d12", "dxgi"] }
wio = { version = "0.2.2", optional = true }
raw-window-handle = "0.4.2"
